--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-githooks": "^0.3.1",
+    "grunt-http-server": "^1.1.0",
     "grunt-jscs": "^1.0.0"
   },
   "scripts": {
